Fix header logo color in dark mode

--- a/assets/css/extended/custom__.css
+++ b/assets/css/extended/custom__.css
@@ -7,7 +7,7 @@
 
 .dark {
     --header: #0c0c0cec;
-    --header-logo: #c76c0cf6;
+    --header-logo: #ed7003f6;
     --outline: #ab530186;
     --link: #fc6a2bec;
 }
